<resources>
    <string name="app_name">AlChilaxo</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="loginbtn">Iniciar Sesión</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="loginBtnPlaceHolder">Entrar</string>
    <string name="requiredField">Campo requerido</string>
    <string name="title_activity_domicilio">MainActivity</string>
    <string name="title_activity_adomicioo">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favorito</string>
    <string name="favorite">favorito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="Americana">Americana</string>
    <string name="Italiana">Italiana</string>
    <string name="Postres">Postres</string>
    <string name="Bebidas">Bebidas</string>
    <string name="buscar">Buscar</string>
    <string name="refreshCategories">Toca para volver a cargar</string>
    <string name="fullpromos">Ver Todos</string>
    <string name="title_Category">Promociones+Family Packs</string>
    <string name="register">Registrate</string>
    <string name="myfavorite">Mis Favoritos</string>
    <string name="menu">Menú</string>
    <string name="entrar">Entrar</string>
    <string name="oIniciar">O iniciar sesión con</string>
    <string name="open_close">CERRADO</string>
    <string name="tiempo">Tiempo de entrega</string>
    <string name="ejemplosalsa">Ejemplo: sin cebolla, sin picante etc</string>
    <string name="total">TOTAL</string>
    <string name="procesarorden">Procesar orden</string>
    <string name="precioinicial">Precio Inicial</string>
    <string name="cancelaro">Cancelar orden</string>
    <string name="detail">Detalle</string>
    <string name="cargosdec">Cargos de comida</string>
    <string name="agregaralgom">+ Agregar algo más</string>
    <string name="instruccione">*Instrucciones especiales</string>
    <string name="subtotal">SubTotal</string>
    <string name="order">Orden</string>
    <string name="rcategory">Categorias Restaurante</string>
    <string name="categorydetail">Detalle</string>


    <string name="dropdown_title_text">Far away from behind</string>
    <string name="dropdown_content_text">Buying the right telescope to take your love of astronomy to the next level is a big next step in the development of your passion for the stars. In many ways, it is a big step from someone who is just fooling around with astronomy to a serious student of the science.</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="ncelphone">Número de celular</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Crear contraseña</string>
    <string name="repassword">Confirmar contraseña</string>
    <string name="createaccount">Crear cuenta</string>
    <string name="account">Mi cuenta</string>
    <string name="signout">Cerrar sesión</string>
    <string name="edit">Edit</string>
    <string name="notifi">Recibir notificaciones</string>
    <string name="title_activity_eventos">MainActivity</string>
    <string name="deseas">¿Cómo deseas tu banquete?</string>
    <string name="congelado">PRERARAR EN CASA (CONGELADO)</string>
    <string name="preparado">LISTO PARA SERVIR</string>
    <string name="fechadeseo">Para que fecha quieres tu banquete?</string>
    <string name="continuar">Continuar</string>
    <string name="pagar">Pagar</string>
    <string name="camdireccion">Cambiar Dirección +</string>
    <string name="direcentrega">Dirección de entrega</string>
    <string name="tiempoentrega">Tiempo de entrega</string>
    <string name="desc">Aplicar código de Descuento</string>
    <string name="total2">Total</string>
    <string name="agregartargeta">+Agregar otra tarjeta</string>
    <string name="metodopago">Método de Pago</string>
    <string name="ubicacion">Ubicación</string>
    <string name="actualizadirec">Actualiza tu dirección actual</string>
    <string name="agreganuevadir">Agregar tu nueva dirección</string>
    <string name="Ubicacionact">Ubicación actual</string>
    <string name="ubicacionrec">Ubicación reciente</string>
    <string name="agregartargetatitle">Agregar tarjeta</string>
    <string name="numtarjeta">Número de tarjeta*</string>
    <string name="numdui">Número de DUI*</string>
    <string name="titulartarjeta">Titular de la tarjeta*</string>
    <string name="fechadeven">Fecha de vencimiento*</string>
    <string name="codccv">Código de seguridad tarjeta (ccv)*</string>
    <string name="agregar">Agregar</string>
    <string name="efectivo">Efectivo</string>
    <string name="agregarotratargetatitle">Agregar otra tarjeta</string>
    <string name="agregarotratargetatitleplus">+ Agregar otra tarjeta</string>
    <string name="agregarotradirectitle">Agregar otra dirección</string>
    <string name="agregarotradirectitleplus">+ Agregar otra dirección</string>
    <string name="direccionuso">Dirección en uso</string>
    <string name="estadoorden">Estado de orden</string>
    <string name="guardar">Guardar</string>
    <string name="zonaenvio">Zona de envío</string>
    <string name="direccionr">Dirección*</string>
    <string name="ccr">Colonia calle o residencial*</string>
    <string name="numcasa">Número de casa*</string>
    <string name="puntor">Punto de referencia*</string>
    <string name="numtel">Número de teléfono*</string>
    <string name="selecubicacion">Selecciona tu ubicación</string>
    <string name="siguiente">Siguiente</string>
    <string name="nohayfav">No se han agregado Favoritos</string>
    <string name="title_onboarding_1">Pide a Domicilio</string>
    <string name="title_onboarding_2">Agenda Eventos</string>
    <string name="title_onboarding_3">Ordena para llevar</string>
    <string name="title_onboarding_4">Reserva Instalaciones</string>
    <string name="addtarjeta">Mi Tarjeta</string>
    <string name="addothertarjeta">Mi Tageta</string>
    <string name="midireccion">Mis direcciones</string>
    <string name="misordenes">Mis Ordenes</string>
    <string name="ordenes">ordenes</string>
    <string name="ordenprocesada">Orden Procesada</string>
    <string name="nocoincide">Password no Coinciden</string>

    <string name="button_text_start">Start Tracking</string>
    <string name="button_text_end">End Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="permission_status_granted">Location Permission is Granted</string>
    <string name="permission_status_denied">Location Permission is Denied</string>
    <string name="permission_status_blocked">Location Permission is Blocked</string>
    <string name="permission_status_denied_show_notif">"Location permission not granted. " +
                    "Show a notification to alert user"</string>
    <string name="gps_status_enabled">"GPS is Enabled"</string>
    <string name="gps_status_disabled">"GPS is Disabled"</string>
    <string name="notif_in_progress">In Progress…</string>
    <string name="gps_required_title">GPS Required</string>
    <string name="permission_required_title">Location Permission Required</string>
    <string name="gps_required_body">Enable GPS otherwise location tracking won\'t work</string>
    <string name="notif_location_tracking_title">Location Tracking</string>
    <string name="permission_required_body">Allow otherwise location tracking won\'t work</string>
    <string name="permission_blocked_body">Location Permission has been set not to ask again! Please provide it from Settings.</string>
    <string name="notif_gps_waiting_body">Waiting for GPS to be enabled…</string>
    <string name="simulate_notifications">Simulate Notification(s)</string>
    <string name="click_to_retry"> (click to retry)</string>
    <string name="departamento">Departamento*</string>
    <string name="pais">Pais*</string>
    <string name="zonaenvio2">Seleccionar Direccion</string>
    <string name="tipoTarjeta">Tipo Tajeta</string>
    <string name="mes">Mes</string>
    <string name="anio">Año</string>
    <string name="Mitarjetas">Mis Tarjetas</string>
    <string name="tarjetauso">Tarjeta en uso</string>
    <string name="cadena">Restaurantes</string>
    <string name="platos">Platos</string>
    <string name="noencontro">No se encuentra</string>
    <string name="carrito">Carrito</string>
    <string name="login">Iniciar Sesion</string>
    <string name="claveError">Clave Erronea</string>
    <string name="emailError">Correo Erroneo</string>

    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
    </string-array>
</resources>