<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_115sdp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUserLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/back"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:visibility="visible"
            app:boxStrokeColor="#fff"
            app:errorTextColor="#ffc1c1"
            app:hintTextColor="@color/colorPrimary"
            app:startIconDrawable="@drawable/userp">

            <EditText
                android:id="@+id/inputUserText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:drawablePadding="12dp"

                android:hint="@string/correo"
                android:inputType="textPostalAddress"

                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="#e9e9e9"
                android:textSize="18sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/colorAccent"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:visibility="visible"
            app:hintTextColor="@color/colorPrimary"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#fff"
            app:errorTextColor="#ffc1c1"
            app:startIconDrawable="@drawable/contrap">

            <EditText
                android:id="@+id/inputPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:cursorVisible="false"

                android:drawablePadding="12dp"

                android:fadingEdge="horizontal|vertical"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="#e9e9e9"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/entrar"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <ProgressBar
            android:id="@+id/loginButtonLoading"
            android:theme="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_height="@dimen/_50sdp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPasswordLayout"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:foregroundGravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/oIniciar"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fb" />

                <ImageButton
                    android:id="@+id/btnLoginGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>